--- a/docs/style.css
+++ b/docs/style.css
@@ -24,7 +24,7 @@ header p {
 }
 
 header img.perfil {
-    width: 120px;
+    width: auto;
     height: 120px;
     border-radius: 0%;
     margin-top: 10px;
