--- a/docs/style.css
+++ b/docs/style.css
@@ -25,7 +25,7 @@ header p {
 
 header img.perfil {
     width: auto;
-    height: 120px;
+    height: auto;
     border-radius: 0%;
     margin-top: 10px;
     border: 3px solid white;
