--- a/docs/style.css
+++ b/docs/style.css
@@ -24,8 +24,8 @@ header p {
 }
 
 header img.perfil {
-    width: auto;
-    height: auto;
+    width: 100px;
+    height: 120px;
     border-radius: 0%;
     margin-top: 10px;
     border: 3px solid white;
