--- a/docs/style.css
+++ b/docs/style.css
@@ -82,7 +82,7 @@ ul, ol {
 }
 
 .empresa {
-    color: #007BFF; /* Cambia este color al que prefieras */
+    color:#f988ff; /* Cambia este color al que prefieras */
     font-weight: bold; /* Opcional: hace que el texto sea negrita */
 }
 
